# ncnn-Android-DBnet

./: README.md  local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: v3det.param
app/src/main/java/com/ncnn/dbnet/: MainActivity.java  NcnnDBnet.java
app/src/main/jni/: CMakeLists.txt  DBnetJNI.cpp  Det.cpp  Det.h  common.h
app/src/main/res/values/: strings.xml
